--- a/index.html
+++ b/index.html
@@ -1,14 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>我的项目</title>
+    <link rel="stylesheet" href="./assets/fonts/iconfont.css">
+    <link rel="stylesheet" href="./assets/lib/layui/css/layui.css">
+    <link rel="stylesheet" href="./assets/css/index.css">
 </head>
 
-<body>
-    首页
+<body class="layui-layout-body">
+
+    <div class="layui-layout layui-layout-admin">
+        <div class="layui-header">
+            <div class="layui-logo">
+                <img src="./assets/images/logo.png" alt="">
+            </div>
+
+            <ul class="layui-nav layui-layout-right">
+                <li class="layui-nav-item">
+                    <a href="javascript:;">
+                        <img style="display: none;" class="avatar" src="./assets/images/sample.jpg"
+                            class="layui-nav-img">
+                        <span style="display: none;" class="text-avatar" class="text-avatar">A</span>
+                        <span class="person-centrt">个人中心</span>
+                    </a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="">基本资料</a></dd>
+                        <dd><a href="">安全设置</a></dd>
+                        <dd><a href="">修改密码</a></dd>
+                    </dl>
+                </li>
+                <li id="logout" class="layui-nav-item"><a href=""><span class="iconfont icon-tuichu"></span>退出</a></li>
+            </ul>
+        </div>
+
+        <div class="layui-side layui-bg-black">
+            <div class="layui-side-scroll">
+
+                <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
+                <ul class="layui-nav layui-nav-tree" lay-filter="test" lay-shrink="all">
+                    <li class="user-info">
+                        <img style="display: none;" class="avatar" src="./assets/images/sample.jpg" alt="">
+                        <span style="display: none;" class="text-avatar">A</span>
+                        <span style="display: none;" class="nickname">欢迎xxx</span>
+                    </li>
+
+                    <li class="layui-nav-item layui-nav-itemed">
+                        <a class="" href="./home/dashboard.html" target="fm"><span
+                                class="iconfont icon-home"></span>首页</a>
+                    </li>
+
+
+                    <li class="layui-nav-item layui-nav-itemed">
+                        <a href="javascript:;"><span class="iconfont icon-home"></span>文章管理</a>
+                        <dl class="layui-nav-child">
+                            <dd><a target="fm" href=""><i class=" layui-icon layui-icon-app"></i>文章类别</a>
+                            </dd>
+                            <dd><a href=" javascript:;"><i class="layui-icon layui-icon-app"></i> 文章列表</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 发布文章</a></dd>
+                        </dl>
+                    </li>
+                    <li class="layui-nav-item">
+                        <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
+                        <dl class="layui-nav-child">
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 基本资料</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 更换头像</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 重置密码</a></dd>
+                        </dl>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="layui-body">
+            <iframe name="fm" src="./home/dashboard.html" frameborder="0"></iframe>
+
+            <!-- 内容主体区域 -->
+            <div style="padding: 15px;">内容主体区域</div>
+        </div>
+
+        <div class="layui-footer">
+            <!-- 底部固定区域 -->
+            大事件
+        </div>
+    </div>
+
+
+    <script src="./assets/lib/axios.js"></script>
+    <script src="./assets/lib/layui/layui.all.js"></script>
+    <script src="./assets/lib/jquery.js"></script>
+    <script src="./assets/js/commentAPIs.js"></script>
+    <script src="./assets/js/index.js"></script>
+
 </body>
 
 </html>
