完成了基本资料的修改提交功能

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <span class="person-centrt">个人中心</span>
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
+                        <dd><a target="fm" href="./user/base-info.html">基本资料</a></dd>
                         <dd><a href="">安全设置</a></dd>
                         <dd><a href="">修改密码</a></dd>
                     </dl>
@@ -56,7 +56,7 @@
                     <li class="layui-nav-item layui-nav-itemed">
                         <a href="javascript:;"><span class="iconfont icon-home"></span>文章管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a target="fm" href=""><i class=" layui-icon layui-icon-app"></i>文章类别</a>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章类别</a>
                             </dd>
                             <dd><a href=" javascript:;"><i class="layui-icon layui-icon-app"></i> 文章列表</a></dd>
                             <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 发布文章</a></dd>
@@ -65,7 +65,8 @@
                     <li class="layui-nav-item">
                         <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 基本资料</a></dd>
+                            <dd><a target="fm" href="./user/base-info.html"><i class="layui-icon layui-icon-app"></i>
+                                    基本资料</a></dd>
                             <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 更换头像</a></dd>
                             <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 重置密码</a></dd>
                         </dl>
