--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <dl class="layui-nav-child">
                         <dd><a target="fm" href="./user/base-info.html">基本资料</a></dd>
                         <dd><a href="">安全设置</a></dd>
-                        <dd><a href="">修改密码</a></dd>
+                        <dd><a target="fm" href="./user/modify-password.html">修改密码</a></dd>
                     </dl>
                 </li>
                 <li id="logout" class="layui-nav-item"><a href=""><span class="iconfont icon-tuichu"></span>退出</a></li>
@@ -68,7 +68,9 @@
                             <dd><a target="fm" href="./user/base-info.html"><i class="layui-icon layui-icon-app"></i>
                                     基本资料</a></dd>
                             <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 更换头像</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 重置密码</a></dd>
+                            <dd><a target="fm" href="./user/modify-password.html"><i
+                                        class="layui-icon layui-icon-app"></i> 重置密码</a>
+                            </dd>
                         </dl>
                     </li>
                 </ul>
