--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </a>
                     <dl class="layui-nav-child">
                         <dd><a target="fm" href="./user/base-info.html">基本资料</a></dd>
-                        <dd><a href="">安全设置</a></dd>
+                        <dd><a href="">更换头像</a></dd>
                         <dd><a target="fm" href="./user/modify-password.html">修改密码</a></dd>
                     </dl>
                 </li>
@@ -67,7 +67,9 @@
                         <dl class="layui-nav-child">
                             <dd><a target="fm" href="./user/base-info.html"><i class="layui-icon layui-icon-app"></i>
                                     基本资料</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 更换头像</a></dd>
+                            <dd><a target="fm" href="./user/avatar.html"><i class="layui-icon layui-icon-app"></i>
+                                    更换头像</a>
+                            </dd>
                             <dd><a target="fm" href="./user/modify-password.html"><i
                                         class="layui-icon layui-icon-app"></i> 重置密码</a>
                             </dd>
