--- a/user/modify-password.html
+++ b/user/modify-password.html
@@ -18,7 +18,7 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">原密码</label>
                     <div class="layui-input-block">
-                        <input type="text" name="oldPwd" required lay-verify="required" placeholder="请输入原密码"
+                        <input type="password" name="oldPwd" required lay-verify="required" placeholder="请输入原密码"
                             autocomplete="off" class="layui-input">
                     </div>
                 </div>
@@ -26,7 +26,7 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">新密码</label>
                     <div class="layui-input-block">
-                        <input id="pass" type="text" name="newPwd" required lay-verify="required|pass"
+                        <input id="pass" type="password" name="newPwd" required lay-verify="required|pass"
                             placeholder="请输入新密码" autocomplete="off" class="layui-input">
                     </div>
                 </div>
