--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                     <li class="layui-nav-item layui-nav-itemed">
                         <a href="javascript:;"><span class="iconfont icon-home"></span>文章管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章类别</a>
+                            <dd><a target="fm" href="./article/category.html"><i
+                                        class="layui-icon layui-icon-app"></i>文章类别</a>
                             </dd>
                             <dd><a href=" javascript:;"><i class="layui-icon layui-icon-app"></i> 文章列表</a></dd>
                             <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 发布文章</a></dd>
