--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
                             <dd><a target="fm" href="./article/category.html"><i
                                         class="layui-icon layui-icon-app"></i>文章类别</a>
                             </dd>
-                            <dd><a href=" javascript:;"><i class="layui-icon layui-icon-app"></i> 文章列表</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 发布文章</a></dd>
+                            <dd><a target="fm" href="./article/list.html"><i class="layui-icon layui-icon-app"></i>
+                                    文章列表</a>
+                            </dd>
+                            <dd><a target="fm" href="./article/publish.html"><i class="layui-icon layui-icon-app"></i>
+                                    发布文章</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item">
@@ -81,7 +84,7 @@
         </div>
 
         <div class="layui-body">
-            <iframe name="fm" src="./home/dashboard.html" frameborder="0"></iframe>
+            <iframe name="fm" src="./article/list.html" frameborder="0"></iframe>
 
             <!-- 内容主体区域 -->
             <div style="padding: 15px;">内容主体区域</div>
