完成了文章提交功能

--- a/article/edit.html
+++ b/article/edit.html
@@ -15,7 +15,7 @@
         <div class="layui-card-header">写文章</div>
         <div class="layui-card-body">
             <!-- 文章类别 -->
-            <form class="layui-form publish-form" action="">
+            <form class="layui-form publish-form" lay-filter="edit-form" action="">
                 <div class="layui-form-item">
                     <label class="layui-form-label">标题</label>
                     <div class="layui-input-block">
@@ -86,7 +86,7 @@
     <script src="../assets/lib/layui/layui.all.js"></script>
     <script src="../assets/lib/axios.js"></script>
     <script src="../assets/js/commentAPIs.js"></script>
-    <script src="../assets/js/article/publish.js"></script>
+    <script src="../assets/js/article/edit.js"></script>
 </body>
 
 </html>
